@@ -1,19 +1,16 @@
 Left TODO:
 
- * Find initial theme, and if it's not a metatheme keep it around to put
+ * Find initial theme, and if it's a custom metatheme keep it around to put
    in the list when selecting a different theme.
 
- * Change custom theme removal addition to handle above
+ * Change custom theme removal addition to handle above.
 
  * Change custom theme text to indicate what themes are being used.
 
- * Create an icon for custom themes
-
- * Create a default icon.
-
  * Notice when a directory is removed.
 
- * Sanity check saving.
+ * Sanity check saving.  In particular, \n needs escaping.
 
-
-
+ * Fix when saving a theme.  Seems to be a small race condition there
+   that screws a lot up.  Should be trackable, though I fear it's going
+   to test my fam-fu
