@@ -1,3 +1,13 @@
+Tue Jan  7 03:10:36 2003  Jonathan Blandford  <jrb@gnome.org>
+
+	* gnome-theme-save.c (save_dialog_response): add a description
+	entry.  Still needs escaping.
+
+	* theme-thumbnail.c (generate_theme_thumbnail): read the thumbnail
+	back from the child correctly.  I think thumbnailing fully works.
+
+	* TODO: Update
+
 2003-01-06  Seth Nickell  <snickell@stanford.edu>
 
 	* gnome-theme-manager.c: (load_meta_themes):
